# CppGenDS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
0x01-ArrayStack/: Array.hpp  ArrayStack.hpp  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md
tests/0x01-ArrayStack/: CMakeLists.txt  test_Array.cpp  test_ArrayStack.cpp
